--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,18 @@ dependencies {
 	//testcontainers
 	testImplementation "org.testcontainers:testcontainers:1.20.3"
 	testImplementation "org.testcontainers:junit-jupiter:1.20.3"
+
+	// MySQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//Jakarta.
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
