:wrench: chore: config 파일 설정, 인가 필터 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,13 @@ spring:
   h2:
     console:
       enabled: true
+
+database:
+  catalog: test_icon
+
+security:
+  cors:
+    paths:
+      - ${APP_FRONT}
+      - ${CREATOR_FRONT}
+      - ${ADMIN_FRONT}
