--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.adarshr.test-logger' version '4.0.0'
 }
 
 group = 'com.timetoast'
@@ -41,8 +42,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 	//testcontainers
+	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
 	testImplementation "org.testcontainers:testcontainers:1.20.3"
 	testImplementation "org.testcontainers:junit-jupiter:1.20.3"
+	testImplementation "org.testcontainers:mysql:1.20.3"
 
 	// MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -54,9 +57,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
 }
+
+testlogger {
+	slowThreshold 0
+}
+
+jar.enabled = false
