--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.apache.commons:commons-lang3:3.13.0'
 
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -60,6 +61,7 @@ dependencies {
 }
 
 tasks.named('test') {
+	useJUnitPlatform()
 }
 
 testlogger {
